--- a/스터디_2023/프로젝트/이마트24/css/style.scss
+++ b/스터디_2023/프로젝트/이마트24/css/style.scss
@@ -935,9 +935,58 @@ body {
         }
     }
     .sns_list{
+        font-size:0;
+        line-height:0;
         li{
             display: inline-block;
+            vertical-align: top;
+            a{
+                display: block;
+                width:36px;
+                height:36px;
+                &::before{
+                    display: block;
+                    margin:10px auto 0;
+                    @include sprite_img(23px, 16px, '../images/main_sprite.png', -98px -28px)
+                }
+            }
+            &.youtube{
+                a{
+                    &::before{
+                        @include sprite_img(23px, 16px, '../images/main_sprite.png', -98px -28px)
+                
+                    }
+                }
+            }
+            &.insta{
+                a{
+                    &::before{
+                        margin-top: 7px;
+                        @include sprite_img(22px, 22px, '../images/main_sprite.png', -127px -28px)
+                
+                    }
+                }
+            }
+            &.facebook{
+                a{
+                    &::before{
+                        @include sprite_img(18px, 18px, '../images/main_sprite.png', -156px -28px)
+                
+                    }
+                }
+            }
+            &.tictok{
+                a{
+                    &::before{
+                        margin-top:7px;
+                        @include sprite_img(18px, 20px, '../images/main_sprite.png', -183px -28px)
+                
+                    }
+                }
+            }
         }
+        
+
     }
     
 }
