--- a/스터디_2023/프로젝트/이마트24/css/_header.scss
+++ b/스터디_2023/프로젝트/이마트24/css/_header.scss
@@ -1,5 +1,9 @@
 @charset "UTF-8";
-
+header{
+    position: relative;
+    height: 115px;
+    z-index:70;
+}
 h1{font-size: 0;line-height: 0;}
 .accessibility{
     position:fixed;
@@ -17,8 +21,9 @@ h1{font-size: 0;line-height: 0;}
             height:auto; 
             padding-top:5px; 
             padding-bottom:5px; 
-            background-color:#000; 
-            color:#fff;}
+            background-color:$Black; 
+            color:$White;
+        }
     }
 }
 
@@ -53,16 +58,86 @@ h1{font-size: 0;line-height: 0;}
 }
 
 .lnb{
-    .depth1_item{
-        display: inline-block;
-        vertical-align: top;
-        .depth1_text{
-            font-size:20px;
-            line-height: 30px;
-            color: $BasicColor;
-            &:hover{
-                color: $BrandColorYellow;
+    position: relative;
+    
+    .menu{
+        position: absolute;
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 90px;
+        transition: height 0.2s ease-in-out;
+        &::before{
+            display: block;
+            position: absolute;
+            top:90px;
+            left: calc(50% - 1000px);
+            width:2000px;
+            height:0;
+            background-color:rgba(78,80,89,0.87);
+        }
+    }
+    .depth1{
+        width:1280px;
+        margin:0 auto;
+        text-align: center;
+        z-index:30;
+        .depth1_item{
+            display: inline-block;
+            float:none;
+            padding:30px 90px 30px 0;
+            vertical-align: top;
+            .depth1_text{
+                font-size:20px;
+                line-height: 30px;
+                color: $BasicColor;
+                &:hover{
+                    color: $BrandColorYellow;
+                }
+            }
+            .depth2{
+                position: absolute;
+                top:90px;
+                .depth2_item{
+                    display: block;
+                    float:none;
+                    a{
+                        font-size:15px;
+                        line-height:22px;
+                        color: $White;
+                        letter-spacing:-0.025em;
+                        &:hover{
+                            color:$BrandColorYellow;
+                        }
+                    }
+                }
+            }
+            
+        }
+    }
+    }
+    
+.lnb_open{
+    .lnb{
+        .menu{
+            &::before{
+                height: 100%;
             }
         }
+        
+        .depth2{
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+}
+@include onlyPC {
+    .lnb{
+        .menu_hide,.menu_show{
+            display: none;
+        }
+    }
+    .lnb_curtain{
+        display: none;
     }
 }
