--- a/스터디_2023/프로젝트/이마트24/css/_header.scss
+++ b/스터디_2023/프로젝트/이마트24/css/_header.scss
@@ -28,6 +28,8 @@ h1{font-size: 0;line-height: 0;}
 }
 
 .logo{
+    position: absolute;
+    top:55px;
     a{
         width:113px;
         height: 20px;
@@ -36,9 +38,8 @@ h1{font-size: 0;line-height: 0;}
 }
 
 .gnb {
-    position: absolute;
-    top:0;
-    right: 0;
+    position: relative;
+    text-align: right;
     li{
         display: inline-block;
         a{
@@ -80,11 +81,12 @@ h1{font-size: 0;line-height: 0;}
     .depth1{
         width:1280px;
         margin:0 auto;
+        padding-left:120px;
         text-align: center;
         z-index:30;
         .depth1_item{
             display: inline-block;
-            float:none;
+            float:none !important;
             padding:30px 90px 30px 0;
             vertical-align: top;
             .depth1_text{
@@ -98,19 +100,29 @@ h1{font-size: 0;line-height: 0;}
             .depth2{
                 position: absolute;
                 top:90px;
-                .depth2_item{
-                    display: block;
-                    float:none;
-                    a{
-                        font-size:15px;
-                        line-height:22px;
-                        color: $White;
-                        letter-spacing:-0.025em;
-                        &:hover{
-                            color:$BrandColorYellow;
+                
+                text-align:left;
+                .depth2_list{
+                    padding:24px 0 30px;
+                    .depth2_item{
+                        display: block;
+                        float:none;
+                        margin-top:8px;
+                        &:first-child{
+                            margin-top:0;
+                        }
+                        a{
+                            font-size:15px;
+                            line-height:22px;
+                            color: $White;
+                            letter-spacing:-0.025em;
+                            &:hover{
+                                color:$BrandColorYellow;
+                            }
                         }
                     }
                 }
+                
             }
             
         }
@@ -121,7 +133,7 @@ h1{font-size: 0;line-height: 0;}
     .lnb{
         .menu{
             &::before{
-                height: 100%;
+                height:calc(100% - 90px);
             }
         }
         
