--- a/스터디_2023/프로젝트/이마트24/css/style.scss
+++ b/스터디_2023/프로젝트/이마트24/css/style.scss
@@ -114,23 +114,30 @@ body {
 
         .control_box {
             display: inline-block;
-
+            font-size:0;
+            line-height:0;
+            vertical-align: middle;
             button {
                 width: 24px;
                 height: 24px;
+                border:0;
                 font-size: 0;
                 line-height: 0;
 
                 &::before {
                     display: block;
+                    margin: 0 auto;
                     @include sprite_img(12px, 12px, '../images/main_sprite.png', -3px -2px)
                 }
 
             }
 
             .auto {
+                margin-right:25px;
                 &::before {
-                    @include sprite_img(7px, 11px, '../images/main_sprite.png', -43px -2px)
+                    
+                    @include sprite_img(7px, 11px, '../images/main_sprite.png', -43px -2px);
+                    
                 }
             }
 
@@ -141,6 +148,7 @@ body {
             }
 
             .prev {
+                margin-right:25px;
                 &::before {
                     transform: rotate(180deg);
                 }
@@ -149,11 +157,17 @@ body {
 
         .count_box {
             display: inline-block;
-
+            margin-left:15px;
+            vertical-align:middle;
+            > span{
+                width:16px;
+                text-align: center;
+            }
             .progress {
                 display: inline-block;
                 position: relative;
                 width: 156px;
+                margin: 0 5px;
                 box-sizing: border-box;
                 vertical-align: middle;
 
@@ -246,11 +260,13 @@ body {
                 line-height: 20px;
                 color: $gray;
                 text-align: left;
-
+                transition: all 0.2s ease-in-out;
                 &:hover {
+                    width: calc(100% - 10px);
                     background-color: $BrandColorYellow;
                     color: $White;
                     box-shadow: 0 8px 24px rgba(249, 187, 0, 0.31);
+                    opacity: 0.9;
                 }
 
                 &::before {
@@ -265,7 +281,7 @@ body {
                     display: block;
                     position: absolute;
                     top: calc(50% - 3px);
-                    right: 30px;
+                    left:250px;
                     @include sprite_img(7px, 9px, '../images/main_sprite.png', -4px -22px)
                 }
             }
@@ -324,7 +340,7 @@ body {
         .tab_content {
             display: none;
             float: right;
-            width: 909px;
+            width: 915px;
             margin-top: -50px;
         }
 
@@ -356,25 +372,14 @@ body {
                 }
 
                 .img_box {
+                    overflow: hidden;
                     position: relative;
                     padding: 74px 0 30px;
-                    border: 4px solid transparent;
+                    border: 1px solid #ebebeb;
                     border-radius: 24px;
                     box-sizing: border-box;
                     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.02);
-                    transition: all 0.1s ease-in-out;
-
-                    &:after {
-                        display: block;
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        width: calc(100% + 4px);
-                        height: calc(100% + 4px);
-                        border: 1px solid #ebebeb;
-                        border-radius: 24px;
-                    }
-
+                    transition: all 0.2s ease-in-out;
                     img {
                         transform: scale(1);
                         transition: all 0.2s ease-in-out;
@@ -456,7 +461,7 @@ body {
 @include mobile {}
 
 .only_emart {
-    margin-top: 195px;
+    margin-top: 155px;
 
     .title_box {
         h2 {
@@ -618,6 +623,7 @@ body {
 
         li {
             display: inline-block;
+            position: relative;
             width: calc((100% - 32px)/3);
             height: 418px;
             margin-right: 16px;
@@ -625,15 +631,6 @@ body {
             border-radius: 36px;
             transform: translateY(0);
             transition: all 0.2s ease-in-out;
-
-            &:last-child {
-                margin-right: 0;
-            }
-
-            &:hover {
-                transform: translateY(-15px);
-            }
-
             &::before {
                 display: block;
                 position: absolute;
@@ -641,12 +638,11 @@ body {
                 top: 26px;
                 @include sprite_img(36px, 36px, '../images/main_sprite.png', -234px -2px)
             }
-
             a {
                 display: block;
+                position: relative;
                 height: 100%;
                 padding: 24px;
-
                 .title {
                     margin-bottom: 30px;
                     font-size: 28px;
@@ -661,6 +657,26 @@ body {
                     color: $Black;
                     font-weight: 400;
                 }
+                .icon{
+                    display: block;
+                    position:absolute;
+                    left: calc(50% - 175px);
+                    bottom:24px;
+                    width:350px;
+                    &::before{
+                        display: block;
+                        width:100%;
+                        height:239px;
+                        @include bg_img(contain , '../images/found1.png')
+                    }
+                }
+            }
+            &:hover {
+                transform: translateY(-15px);
+                
+            }
+            &:last-child {
+                margin-right: 0;
             }
         }
     }
