--- a/스터디_2023/프로젝트/이마트24/css/style.scss
+++ b/스터디_2023/프로젝트/이마트24/css/style.scss
@@ -247,7 +247,7 @@ body {
         .tab_item {
             transition: all 0.2s ease-in-out;
 
-            &+.tab_item {
+            & +.tab_item {
                 margin-top: 16px;
             }
 
@@ -585,6 +585,77 @@ body {
 
 }
 
+@keyframes gray {
+    0% {
+        transform: translateY(-6%);
+    }
+    20% {
+        transform: translateY(0);
+        filter:grayscale(0)
+    }
+    50% {
+        transform: translateY(-5%);
+        filter:grayscale(1)
+    }
+    100% {
+        transform: translateY(0);
+        filter:grayscale(0)
+    }
+
+}
+@keyframes coin1 {
+    0% {
+        opacity:0;
+        transform: translateY(-50%);
+        filter:brightness(1)
+    }
+    50% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    80% {
+        opacity:0;
+        transform: translateY(50%);
+  
+    }
+    100% {
+        opacity: 0;
+    }
+
+}
+@keyframes coin2 {
+    0% {
+        opacity:0;
+        transform: translateY(-50%);
+    }
+    30% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    60% {
+        opacity:0;
+  
+    }
+    70% {
+        transform: translateY(50%);
+  
+    }
+    100% {
+        opacity: 0;
+    }
+
+}
+@keyframes jump {
+    0% {
+        transform: translateY(-5%);
+        filter:brightness(1.02)
+    }
+    100% {
+        transform: translateY(0);
+    }
+
+}
+
 .buisness {
     position: relative;
     margin-top: 290px;
@@ -622,6 +693,7 @@ body {
         line-height: 0;
 
         li {
+            overflow: hidden;
             display: inline-block;
             position: relative;
             width: calc((100% - 32px)/3);
@@ -630,7 +702,7 @@ body {
             background-color: $White;
             border-radius: 36px;
             transform: translateY(0);
-            transition: all 0.2s ease-in-out;
+            transition: all 0.2s linear;
             &::before {
                 display: block;
                 position: absolute;
@@ -665,6 +737,7 @@ body {
                     width:350px;
                     &::before{
                         display: block;
+                        
                         width:100%;
                         height:239px;
                         @include bg_img(contain , '../images/found1.png')
@@ -673,10 +746,58 @@ body {
             }
             &:hover {
                 transform: translateY(-15px);
-                
+                .icon{
+                    &::before{
+                        animation: gray 2s linear infinite alternate;
+                    }
+                }
+            }
+            &:nth-child(2){
+                .icon{
+                    &::before{
+                        position: absolute;
+                        top:0;
+                        left: 0;
+                        @include bg_img(contain , '../images/found3.png');
+                    }
+                    &::after{
+                        display: block;
+                        position: absolute;
+                        top:0;
+                        left: 0;
+                        width:100%;
+                        height:239px;
+                        @include bg_img(contain , '../images/found4.png');
+                    }
+                }
+                &:hover{
+                    .icon{
+                        &::before{
+                            animation:coin2 2s cubic-bezier(1,0.5,0.5,1)  infinite ;
+                        }
+                        &::after{
+                            animation:coin1 2s cubic-bezier(1,0.8,0.5,1)  infinite ;
+                        }
+                    }
+                    img{
+                     transform: translateY(-6%);   
+                    }
+                }
             }
             &:last-child {
                 margin-right: 0;
+                .icon{
+                    &::before{
+                        @include bg_img(contain , '../images/found5.png')
+                    }
+                }
+                &:hover{
+                    .icon{
+                        &::before{
+                            animation: jump 0.5s linear infinite alternate;
+                        }
+                    }
+                }
             }
         }
     }
