--- a/스터디_2023/프로젝트/이마트24/css/style.scss
+++ b/스터디_2023/프로젝트/이마트24/css/style.scss
@@ -232,7 +232,7 @@ body {
 
 .event {
     margin-top: 127px;
-
+    @include sectionAni;
     h2 {
         font-size: 45px;
         line-height: 50px;
@@ -462,7 +462,7 @@ body {
 
 .only_emart {
     margin-top: 155px;
-
+    @include sectionAni;
     .title_box {
         h2 {
             font-size: 48px;
@@ -660,16 +660,25 @@ body {
     position: relative;
     margin-top: 290px;
     padding: 157px 0 203px;
-
+    @include sectionAni;
+    &[data-on=on]{
+        &::before{
+            opacity: 1;
+            transition:all 0.9s ease;
+            transform: translateX(0);
+        }
+    }
     &::before {
         display: block;
         position: absolute;
-        top: 0;
+        bottom: 0;
         left: 216px;
         width: 1800px;
         height: 100%;
         border-radius: 64px 0px 0px 192px;
         background: linear-gradient(#fece6a, #fee6b4);
+        transform: translateX(10%);
+        opacity: 0;
     }
 
     .title_box {
@@ -817,7 +826,7 @@ body {
 .store {
     position: relative;
     margin-top: 176px;
-
+    @include sectionAni;
     &::before {
         display: block;
         position: absolute;
@@ -941,7 +950,14 @@ body {
     position: relative;
     min-height: 950px;
     margin-top: 165px;
-
+    @include sectionAni;
+    &[data-on=on]{
+        &::before{
+            opacity: 1;
+            transition:all 0.9s ease;
+            transform: translateX(0);
+        }
+    }
     &::before {
         display: block;
         position: absolute;
@@ -951,6 +967,8 @@ body {
         height: 100%;
         border-radius: 0 256px 64px 0;
         background: #f3f3f3;
+        opacity: 0;
+        transform:translateX(-10%);
     }
 
     .img_box {
@@ -1002,6 +1020,38 @@ body {
 
 .story{
     margin-top:125px;
+    @include sectionAni;
+    .slide_item{
+        transition: all 0.7s ease;
+        &:nth-child(1){
+            opacity: 0;
+            transform: translateX(10%);
+        }
+        &:nth-child(2){
+            opacity: 0;
+            transform: translateY(-10%);
+        }
+        &:nth-child(3){
+            opacity: 0;
+            transform: translateY(10%);
+        }
+    }
+    &[data-on=on]{
+        .sns_slide{
+            .slide_item{
+                &:nth-child(1){
+                    @include aniReset;
+                }
+                &:nth-child(2){
+                    @include aniReset;
+                }
+                &:nth-child(3){
+                    @include aniReset;
+                }
+            }
+        }
+        
+    }
     .title_box{
         float: left;
         h2{
@@ -1074,28 +1124,111 @@ body {
         }
     }
     .sns_slide{
+        position: relative;
         float: right;
         width: 908px;
+        height: 561px;
+        .odd{
+            .slide_item{
+                &:nth-child(odd){
+                    margin-top: 64px;
+                }
+            }
+        }
+        .even{
+            .slide_item{
+                &:nth-child(even){
+                    margin-top: 64px;
+                }
+            }
+        }
         .slide_item{
+            width:295px;
+            margin-right:10px;
+            transition: all 0.7s ease;
             a{
                 display: block;
+                text-decoration: none;
                 .img_box{
                     overflow: hidden;
-                    width:288px;
+                    width:100%;
                     height:388px;
+                    border:4px solid transparent;
                     border-radius:48px;
+                    transition: all 0.3s ease;
                     span{
                         display: block;
                         height: 100%;
                         @include style_bg;
+                        transition: all 0.3s ease;
                     }
                     
                 }
-            }
-            &:nth-child(2n){
-                margin-top: 64px;
+                
+                .text_box{
+                    margin-top:15px;
+                    .title{
+                        .icon{
+                            display: inline-block;
+                            position: relative;
+                            width:48px;
+                            height:48px;
+                            border:1px solid #ebebeb;
+                            border-radius:50%;
+                            vertical-align: middle;
+                            &::before{
+                                display: block;
+                                position: absolute;
+                                left: calc(50% - 12px);
+                                top: calc(50% - 12px);
+                                @include sprite_img(24px, 24px, '../images/main_sprite.png', -214px -56px)
+
+                            }
+                        }
+                        span{
+                            display: inline-block;
+                            margin-left:8px;
+                            font-size:24px;
+                            line-height:30px;
+                            font-weight:300;
+                            color: $BasicColor;
+                            vertical-align: middle;
+                        }
+                        p{
+                            overflow: hidden;
+                            height:44px;
+                            margin-left:60px;
+                            font-size:15px;
+                            line-height:22px;
+                            color:$gray;
+                        }
+                    }
+                }
+                &:hover{
+                    .img_box{
+                        border: 4px solid $BrandColorYellow;
+                        span{
+                            transform: scale(1.1);
+                        }
+                    }
+                    .text_box{
+                        .title{
+                            .icon{
+                                border:1px solid $BrandColorYellow;
+                                background-color:#f9f9f9;
+                            }
+                            span{
+                                color: $BrandColorYellow;
+                            }
+                            p{
+                                color: $BrandColorYellow;
+                            }
+                        }
+                    }
+                }
                 
             }
+         
             
             &:nth-child(2n - 1){
                 .img_box{
@@ -1109,13 +1242,56 @@ body {
                 }
                 
             }
+            &:nth-child(1){
+                opacity: 0;
+                transform: translateX(-300px);
+            }
+            &:nth-child(2){
+                opacity: 0;
+                transform: translateY(300px);
+            }
+            &:nth-child(3){
+                opacity: 0;
+                transform: translateY(-300px);
+            }
+        }
+        .control_box{
+            position: absolute;
+            top:calc(50% - 27px);
+            width:100%;
+            button{
+                position: absolute;
+                left:16px;
+                width:54px;
+                height:54px;
+                font-size:0;
+                line-height:0;
+                border:1px solid $gray;
+                border-radius:50%;
+                background-color:rgba(255,255,255,0.66);
+                &::before{
+                    display: block;
+                    margin:0 auto;
+                    @include sprite_img(20px, 18px, '../images/main_sprite.png', -54px -41px)
+                }
+                &:hover{
+                    background-color:$White;
+                }
+                &.next{
+                    left:auto;
+                    right:16px;
+                    &::before{
+                        transform: rotate(-180deg);
+                    }
+                }
+            }
         }
     }
 }
 
 .media {
     margin: 120px 0 160px;
-
+    @include sectionAni;
     h2 {
         margin-bottom: 22px;
         font-size: 20px;
