--- a/스터디_2023/프로젝트/이마트24/css/style.css
+++ b/스터디_2023/프로젝트/이마트24/css/style.css
@@ -5,7 +5,13 @@
 /*반응형, 브라우저 크기가 1280px 이하일때*/
 /*반응형, 브라우저 크기가 1000px 이하일때*/
 /*반응형, 브라우저 크기가 640px 이하일때*/
-header { position: relative; height: 115px; z-index: 70; }
+header { position: relative; width: 100%; height: 115px; z-index: 70; -webkit-transition: all 0.2s ease; transition: all 0.2s ease; }
+
+header::before { display: block; position: absolute; width: 100%; height: 100%; background-color: #fff; }
+
+.fixed header { position: fixed; -webkit-transform: translateY(-25px); transform: translateY(-25px); }
+
+.fixed header::before { -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); background-color: rgba(255, 255, 255, 0.5); }
 
 h1 { font-size: 0; line-height: 0; }
 
@@ -21,13 +27,13 @@ h1 { font-size: 0; line-height: 0; }
 
 .gnb { position: relative; text-align: right; }
 
-.gnb li { display: inline-block; }
+.gnb ul { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; gap: 16px; }
 
-.gnb li a { font-size: 12px; line-height: 20px; color: #999; letter-spacing: -0.025em; }
+.gnb ul li { display: inline-block; }
 
-.gnb li a:hover { color: #f9bb00; }
+.gnb ul li a { font-size: 12px; line-height: 20px; color: #999; letter-spacing: -0.025em; }
 
-.gnb li + li { margin-left: 20px; }
+.gnb ul li a:hover { color: #f9bb00; }
 
 .lnb { position: relative; }
 
@@ -64,39 +70,55 @@ h1 { font-size: 0; line-height: 0; }
 
 footer { position: relative; padding: 80px 0; background-color: #f4f4f4; font-size: 12px; line-height: 20px; }
 
-footer .footer_link { font-size: 0; line-height: 0; }
+footer .footer_top { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
 
-footer .footer_link li { display: inline-block; position: relative; }
+footer .footer_top .footer_link { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
-footer .footer_link li a { padding: 0 14px; font-size: 12px; line-height: 20px; color: #333; font-weight: 300; }
+footer .footer_top .footer_link li { position: relative; }
 
-footer .footer_link li:hover a { color: #f9bb00; }
+footer .footer_top .footer_link li a { padding: 0 14px; font-size: 12px; line-height: 20px; color: #333; font-weight: 300; }
 
-footer .footer_link li:after { content: ''; display: block; position: absolute; right: 0; top: 7px; width: 1px; height: 8px; background-color: #999; }
+footer .footer_top .footer_link li:hover a { color: #f9bb00; }
 
-footer .footer_link li:first-child a { padding-left: 0; }
+footer .footer_top .footer_link li:after { content: ''; display: block; position: absolute; right: 0; top: 7px; width: 1px; height: 8px; background-color: #999; }
 
-footer .footer_link li:last-child:after { display: none; }
+footer .footer_top .footer_link li:first-child a { padding-left: 0; }
 
-footer .footer_link li.privacy a { font-weight: 500; }
+footer .footer_top .footer_link li:last-child:after { display: none; }
 
-footer .family_site { position: absolute; right: 0; top: 0; }
+footer .footer_top .footer_link li.privacy a { font-weight: 500; }
 
-footer .family_site .family_btn:after { display: inline-block; margin-left: 5px; content: '+'; }
+footer .footer_top .family_site { position: relative; }
 
-footer .family_site .layer { display: none; overflow-y: scroll; position: absolute; bottom: 24px; left: 0; width: 170px; height: 280px; border: 0.5px solid #ebebeb; -webkit-box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05); box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05); background-color: #fff; }
+footer .footer_top .family_site .family_btn:after { display: inline-block; margin-left: 5px; content: '+'; }
 
-footer .family_site .layer li a { padding: 8px 12px; font-size: 15px; line-height: 30px; }
+footer .footer_top .family_site .layer { display: none; overflow-y: scroll; position: absolute; bottom: 24px; left: 0; width: 170px; height: 280px; border: 0.5px solid #ebebeb; -webkit-box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05); box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05); background-color: #fff; }
 
-footer .footer_con { margin-top: 35px; }
+footer .footer_top .family_site .layer li a { padding: 8px 12px; font-size: 15px; line-height: 30px; }
 
-footer .footer_con .title { display: block; }
+footer .footer_bottom { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; margin-top: 35px; }
 
-footer .footer_con .text { display: block; margin-top: 30px; color: #999; line-height: 24px; }
+footer .footer_bottom .footer_con .title { display: block; }
 
-footer .sns_box { position: absolute; right: 0; }
+footer .footer_bottom .footer_con .text { display: block; margin-top: 30px; color: #999; line-height: 24px; }
 
-footer .sns_box li { display: -webkit-box; display: -ms-flexbox; display: flex; }
+footer .footer_bottom .sns_box ul { display: -webkit-box; display: -ms-flexbox; display: flex; gap: 8px; }
+
+footer .footer_bottom .sns_box ul li { width: 32px; height: 32px; background-color: #fff; border-radius: 50%; }
+
+footer .footer_bottom .sns_box ul li a { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; height: 100%; font-size: 0; line-height: 0; }
+
+footer .footer_bottom .sns_box ul li a::before { display: block; width: 15px; height: 11px; background-image: url("../images/main_sprite.png"); background-position: -98px -61px; background-repeat: no-repeat; }
+
+footer .footer_bottom .sns_box ul li.youtube a:before { width: 15px; height: 11px; background-image: url("../images/main_sprite.png"); background-position: -98px -61px; background-repeat: no-repeat; }
+
+footer .footer_bottom .sns_box ul li.insta a:before { width: 14px; height: 14px; background-image: url("../images/main_sprite.png"); background-position: -120px -61px; background-repeat: no-repeat; }
+
+footer .footer_bottom .sns_box ul li.facebook a:before { width: 8px; height: 16px; background-image: url("../images/main_sprite.png"); background-position: -143px -61px; background-repeat: no-repeat; }
+
+footer .footer_bottom .sns_box ul li.tictok a:before { width: 18px; height: 20px; background-image: url("../images/main_sprite.png"); background-position: -158px -59px; background-repeat: no-repeat; }
+
+@media (max-width: 800px) { footer .footer_top .footer_link { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; } }
 
 /* 초기화 */
 a:link { color: #555; text-decoration: none; }
@@ -449,13 +471,13 @@ body { font-family: 'Noto Sans KR', sans-serif; font-size: 16px; }
 
 .store .tag_box { width: 695px; margin-top: 20px; font-size: 0; line-height: 0; }
 
-.store .tag_box li { display: inline-block; width: calc((100% - 65px)/5); margin-right: 16px; text-align: center; }
+.store .tag_box .tag_list { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -ms-flex-wrap: nowrap; flex-wrap: nowrap; white-space: nowrap; gap: 16px; width: 100%; }
 
-.store .tag_box li:last-child { margin-right: 0; }
+.store .tag_box .tag_list li { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; text-align: center; }
 
-.store .tag_box li a { display: block; width: 100%; padding: 11px 0; font-size: 17px; line-height: 20px; font-weight: 500; color: #000; background-color: #ebebeb; border-radius: 16px 0px 16px 16px; }
+.store .tag_box .tag_list li a { display: block; width: 100%; padding: 12px 16px; font-size: 17px; line-height: 20px; font-weight: 500; color: #000; background-color: #ebebeb; border-radius: 16px 0px 16px 16px; }
 
-.store .tag_box li:hover a { background-color: #f9bb00; }
+.store .tag_box .tag_list li:hover a { background-color: #f9bb00; }
 
 .app { position: relative; min-height: 950px; margin-top: 165px; opacity: 0; -webkit-transform: translateY(200px); transform: translateY(200px); -webkit-transition: all 0.7s ease; transition: all 0.7s ease; }
 
@@ -517,17 +539,17 @@ body { font-family: 'Noto Sans KR', sans-serif; font-size: 16px; }
 
 .story .title_box .sns_list li { display: inline-block; vertical-align: top; }
 
-.story .title_box .sns_list li a { display: block; width: 36px; height: 36px; }
+.story .title_box .sns_list li a { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 36px; height: 36px; }
 
-.story .title_box .sns_list li a::before { display: block; margin: 10px auto 0; width: 23px; height: 16px; background-image: url("../images/main_sprite.png"); background-position: -98px -28px; background-repeat: no-repeat; }
+.story .title_box .sns_list li a::before { display: block; width: 23px; height: 16px; background-image: url("../images/main_sprite.png"); background-position: -98px -28px; background-repeat: no-repeat; }
 
-.story .title_box .sns_list li.youtube a::before { width: 23px; height: 16px; background-image: url("../images/main_sprite.png"); background-position: -98px -28px; background-repeat: no-repeat; }
+.story .title_box .sns_list li.youtube a:before { width: 23px; height: 16px; background-image: url("../images/main_sprite.png"); background-position: -98px -28px; background-repeat: no-repeat; }
 
-.story .title_box .sns_list li.insta a::before { margin-top: 7px; width: 22px; height: 22px; background-image: url("../images/main_sprite.png"); background-position: -127px -28px; background-repeat: no-repeat; }
+.story .title_box .sns_list li.insta a:before { width: 22px; height: 22px; background-image: url("../images/main_sprite.png"); background-position: -127px -28px; background-repeat: no-repeat; }
 
-.story .title_box .sns_list li.facebook a::before { width: 18px; height: 18px; background-image: url("../images/main_sprite.png"); background-position: -156px -28px; background-repeat: no-repeat; }
+.story .title_box .sns_list li.facebook a:before { width: 18px; height: 18px; background-image: url("../images/main_sprite.png"); background-position: -156px -28px; background-repeat: no-repeat; }
 
-.story .title_box .sns_list li.tictok a::before { margin-top: 7px; width: 18px; height: 20px; background-image: url("../images/main_sprite.png"); background-position: -183px -28px; background-repeat: no-repeat; }
+.story .title_box .sns_list li.tictok a:before { width: 18px; height: 20px; background-image: url("../images/main_sprite.png"); background-position: -183px -28px; background-repeat: no-repeat; }
 
 .story .sns_slide { position: relative; float: right; width: 908px; height: 561px; }
 
@@ -589,31 +611,29 @@ body { font-family: 'Noto Sans KR', sans-serif; font-size: 16px; }
 
 .media[data-on=on] { opacity: 1; -webkit-transform: translateY(0); transform: translateY(0); }
 
-.media h2 { margin-bottom: 22px; font-size: 20px; line-height: 24px; color: #000; font-weight: 500; }
+.media .wrap { display: -webkit-box; display: -ms-flexbox; display: flex; gap: 16px; }
 
-.media .media_item { position: relative; width: calc((100% - 16px)/2); padding: 32px 32px 40px 32px; background-color: #fff; border-radius: 32px; -webkit-box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05); box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05); }
+.media .wrap .media_item { position: relative; width: 50%; padding: 32px 32px 40px 32px; background-color: #fff; border-radius: 32px; -webkit-box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05); box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05); }
 
-.media .media_item li { font-size: 0; line-height: 0; }
+.media .wrap .media_item h2 { margin-bottom: 22px; font-size: 20px; line-height: 24px; color: #000; font-weight: 500; }
 
-.media .media_item li a { display: block; }
+.media .wrap .media_item li { font-size: 0; line-height: 0; }
 
-.media .media_item li a .text { display: inline-block; width: calc(100% - 90px); margin-right: 10px; font-size: 15px; line-height: 24px; color: #999; font-weight: 400; letter-spacing: -0.025em; vertical-align: top; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+.media .wrap .media_item li a { display: block; }
 
-.media .media_item li a .time { display: inline-block; width: 80px; text-align: right; font-size: 15px; line-height: 20px; color: #999; font-weight: 400; letter-spacing: -0.025em; vertical-align: top; }
+.media .wrap .media_item li a .text { display: inline-block; width: calc(100% - 90px); margin-right: 10px; font-size: 15px; line-height: 24px; color: #999; font-weight: 400; letter-spacing: -0.025em; vertical-align: top; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
 
-.media .media_item li a:hover .text { color: #f9bb00; }
+.media .wrap .media_item li a .time { display: inline-block; width: 80px; text-align: right; font-size: 15px; line-height: 20px; color: #999; font-weight: 400; letter-spacing: -0.025em; vertical-align: top; }
 
-.media .media_item li a:hover .time { color: #f9bb00; }
+.media .wrap .media_item li a:hover .text { color: #f9bb00; }
 
-.media .media_item li + li { margin-top: 15px; }
+.media .wrap .media_item li a:hover .time { color: #f9bb00; }
 
-.media .media_item .more { top: 32px; right: 32px; position: absolute; padding-right: 33px; font-size: 15px; line-height: 24px; color: #333; font-weight: 500; }
+.media .wrap .media_item li + li { margin-top: 15px; }
 
-.media .media_item .more:hover { color: #f9bb00; }
+.media .wrap .media_item .more { top: 32px; right: 32px; position: absolute; padding-right: 33px; font-size: 15px; line-height: 24px; color: #333; font-weight: 500; }
 
-.media .media_item .more:after { display: block; position: absolute; top: 0; right: 0; width: 24px; height: 24px; background-image: url("../images/main_sprite.png"); background-position: -69px -2px; background-repeat: no-repeat; }
+.media .wrap .media_item .more:hover { color: #f9bb00; }
 
-.media .notice { float: left; }
-
-.media .news { float: right; }
+.media .wrap .media_item .more:after { display: block; position: absolute; top: 0; right: 0; width: 24px; height: 24px; background-image: url("../images/main_sprite.png"); background-position: -69px -2px; background-repeat: no-repeat; }
 /*# sourceMappingURL=style.css.map */
