--- a/스터디_2023/프로젝트/이마트24/css/style.scss
+++ b/스터디_2023/프로젝트/이마트24/css/style.scss
@@ -832,7 +832,6 @@ body {
         position: absolute;
         top: 0;
         right: calc(50% - 640px);
-        ;
         width: 415px;
         height: 332px;
         @include bg_img(contain, '../images/mapPaper.png')
@@ -865,7 +864,6 @@ body {
 
             .search_bar {
                 width: 100%;
-                ;
                 padding: 20px 25px;
                 outline: 2px solid $BrandColorYellow;
                 border-radius: 8px 8px 8px 32px;
@@ -910,40 +908,44 @@ body {
     }
 
     .tag_box {
+        
         width: 695px;
         margin-top: 20px;
         font-size: 0;
         line-height: 0;
+        .tag_list{
+            display: flex;
+            justify-content: space-between;
+            flex-wrap:nowrap;
+            white-space: nowrap;
+            gap: 16px;
+            width: 100%;
+            li {
+                flex: 1;
+                text-align: center;
 
-        li {
-            display: inline-block;
-            width: calc((100% - 65px)/5);
-            margin-right: 16px;
-            text-align: center;
-
-            &:last-child {
-                margin-right: 0;
-            }
-
-            a {
-                display: block;
-                width: 100%;
-                padding: 11px 0;
-                font-size: 17px;
-                line-height: 20px;
-                font-weight: 500;
-                color: $Black;
-                background-color: #ebebeb;
-                border-radius: 16px 0px 16px 16px;
-            }
-
-            &:hover {
                 a {
-                    background-color: $BrandColorYellow;
+                    display: block;
+                    width: 100%;
+                    padding: 12px 16px;
+                    font-size: 17px;
+                    line-height: 20px;
+                    font-weight: 500;
+                    color: $Black;
+                    background-color: #ebebeb;
+                    border-radius: 16px 0px 16px 16px;
+                }
+    
+                &:hover {
+                    a {
+                        background-color: $BrandColorYellow;
+                    }
                 }
             }
         }
-    }
+        }
+
+        
 }
 
 .app {
@@ -1075,47 +1077,34 @@ body {
                 display: inline-block;
                 vertical-align: top;
                 a{
-                    display: block;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                     width:36px;
                     height:36px;
                     &::before{
                         display: block;
-                        margin:10px auto 0;
                         @include sprite_img(23px, 16px, '../images/main_sprite.png', -98px -28px)
                     }
                 }
                 &.youtube{
-                    a{
-                        &::before{
-                            @include sprite_img(23px, 16px, '../images/main_sprite.png', -98px -28px)
-                    
-                        }
+                    a:before{
+                        @include sprite_img(23px, 16px, '../images/main_sprite.png', -98px -28px)
                     }
                 }
                 &.insta{
-                    a{
-                        &::before{
-                            margin-top: 7px;
-                            @include sprite_img(22px, 22px, '../images/main_sprite.png', -127px -28px)
-                    
-                        }
+                    a:before{
+                        @include sprite_img(22px, 22px, '../images/main_sprite.png', -127px -28px)
                     }
                 }
                 &.facebook{
-                    a{
-                        &::before{
-                            @include sprite_img(18px, 18px, '../images/main_sprite.png', -156px -28px)
-                    
-                        }
+                    a:before{
+                        @include sprite_img(18px, 18px, '../images/main_sprite.png', -156px -28px)
                     }
                 }
                 &.tictok{
-                    a{
-                        &::before{
-                            margin-top:7px;
-                            @include sprite_img(18px, 20px, '../images/main_sprite.png', -183px -28px)
-                    
-                        }
+                    a:before{
+                        @include sprite_img(18px, 20px, '../images/main_sprite.png', -183px -28px)
                     }
                 }
             }
@@ -1292,83 +1281,80 @@ body {
 .media {
     margin: 120px 0 160px;
     @include sectionAni;
-    h2 {
-        margin-bottom: 22px;
-        font-size: 20px;
-        line-height: 24px;
-        color: $Black;
-        font-weight: 500
-    }
-
-    .media_item {
-        position: relative;
-        width: calc((100% - 16px)/2);
-        padding: 32px 32px 40px 32px;
-        background-color: $White;
-        border-radius: 32px;
-        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05);
-
-        li {
-            font-size: 0;
-            line-height: 0;
-
-            a {
-                display: block;
-
-                .text {
-                    display: inline-block;
-                    width: calc(100% - 90px);
-                    margin-right: 10px;
-                    font-size: 15px;
-                    line-height: 24px;
-                    color: $gray;
-                    font-weight: 400;
-                    letter-spacing: -0.025em;
-                    vertical-align: top;
-                    @include ellipsis(1)
-                }
-
-                .time {
-                    display: inline-block;
-                    width: 80px;
-                    text-align: right;
-                    font-size: 15px;
-                    line-height: 20px;
-                    color: $gray;
-                    font-weight: 400;
-                    letter-spacing: -0.025em;
-                    vertical-align: top;
-                }
-
-                &:hover {
+    .wrap{
+        display: flex;
+        gap: 16px;
+        .media_item {
+            position: relative;
+            width: 50%;
+            padding: 32px 32px 40px 32px;
+            background-color: $White;
+            border-radius: 32px;
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05);
+            h2 {
+                margin-bottom: 22px;
+                font-size: 20px;
+                line-height: 24px;
+                color: $Black;
+                font-weight: 500
+            }
+            li {
+                font-size: 0;
+                line-height: 0;
+    
+                a {
+                    display: block;
+    
                     .text {
-                        color: $BrandColorYellow;
+                        display: inline-block;
+                        width: calc(100% - 90px);
+                        margin-right: 10px;
+                        font-size: 15px;
+                        line-height: 24px;
+                        color: $gray;
+                        font-weight: 400;
+                        letter-spacing: -0.025em;
+                        vertical-align: top;
+                        @include ellipsis(1)
                     }
-
+    
                     .time {
-                        color: $BrandColorYellow;
+                        display: inline-block;
+                        width: 80px;
+                        text-align: right;
+                        font-size: 15px;
+                        line-height: 20px;
+                        color: $gray;
+                        font-weight: 400;
+                        letter-spacing: -0.025em;
+                        vertical-align: top;
+                    }
+    
+                    &:hover {
+                        .text {
+                            color: $BrandColorYellow;
+                        }
+    
+                        .time {
+                            color: $BrandColorYellow;
+                        }
                     }
                 }
+    
+                &+li {
+                    margin-top: 15px;
+                }
             }
-
-            &+li {
-                margin-top: 15px;
+    
+            .more {
+                top: 32px;
+                right: 32px;
+                @include more;
             }
         }
-
-        .more {
-            top: 32px;
-            right: 32px;
-            @include more;
-        }
+    
     }
+    
 
-    .notice {
-        float: left;
-
-    }
-
-    .news {
-        float: right;
-    }
+    
 }
